// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/graphView issues /#2 /comment #1 matches snapshot 1`] = `
Object {
  "id": "373768703",
  "parent": Object {
    "number": "2",
    "repo": Object {
      "name": "example-github",
      "owner": "sourcecred",
      "type": "REPO",
    },
    "type": "ISSUE",
  },
  "type": "COMMENT",
}
`;

exports[`plugins/github/graphView issues /#2 matches snapshot 1`] = `
Object {
  "number": "2",
  "repo": Object {
    "name": "example-github",
    "owner": "sourcecred",
    "type": "REPO",
  },
  "type": "ISSUE",
}
`;

exports[`plugins/github/graphView issues /#2 number of comments matches snapshot 1`] = `8`;

exports[`plugins/github/graphView issues number of issues matches snapshot 1`] = `6`;

exports[`plugins/github/graphView pulls /#5 /comment #1 matches snapshot 1`] = `
Object {
  "id": "396430464",
  "parent": Object {
    "number": "5",
    "repo": Object {
      "name": "example-github",
      "owner": "sourcecred",
      "type": "REPO",
    },
    "type": "PULL",
  },
  "type": "COMMENT",
}
`;

exports[`plugins/github/graphView pulls /#5 /review #1 /comment #1 matches snapshot 1`] = `
Object {
  "id": "171460198",
  "parent": Object {
    "id": "100313899",
    "pull": Object {
      "number": "5",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
    "type": "REVIEW",
  },
  "type": "COMMENT",
}
`;

exports[`plugins/github/graphView pulls /#5 /review #1 has the right number of review comments 1`] = `1`;

exports[`plugins/github/graphView pulls /#5 /review #1 matches snapshot 1`] = `
Object {
  "id": "100313899",
  "pull": Object {
    "number": "5",
    "repo": Object {
      "name": "example-github",
      "owner": "sourcecred",
      "type": "REPO",
    },
    "type": "PULL",
  },
  "type": "REVIEW",
}
`;

exports[`plugins/github/graphView pulls /#5 matches snapshot 1`] = `
Object {
  "number": "5",
  "repo": Object {
    "name": "example-github",
    "owner": "sourcecred",
    "type": "REPO",
  },
  "type": "PULL",
}
`;

exports[`plugins/github/graphView pulls /#5 number of comments matches snapshot 1`] = `1`;

exports[`plugins/github/graphView pulls /#5 number of reviews matches snapshot 1`] = `2`;

exports[`plugins/github/graphView pulls number of pulls matches snapshot 1`] = `3`;

exports[`plugins/github/graphView repo matches snapshot 1`] = `
Object {
  "name": "example-github",
  "owner": "sourcecred",
  "type": "REPO",
}
`;
